@@ -1,3 +1,8 @@
+Thu Jun 26 16:31:41 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-keyboard-properties.c (setup_dialog): use the correct
+	schemas.
+
 Thu Jun 26 07:39:34 2003  Jonathan Blandford  <jrb@gnome.org>
 
 	* gnome-keyboard-properties.c: added the typing break (drwright)
