@@ -1,3 +1,7 @@
+Thu Jun 26 16:37:50 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* Makefile.am (SUBDIRS): add typing-break to subdirs.
+
 Thu Jun 26 07:38:45 2003  Jonathan Blandford  <jrb@gnome.org>
 
 	* typing-break/drwright.c: added the typing break to CVS from
